sumo/tests/traci/VariableRetrieval/Junction/errors/UnknownID/testclient_out.traci
TraCITestClient output file. Date: Sat Oct  9 00:29:39 2010


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=169 varID=66 objID=xxx
.. Answered with error to command (169), [description: Junction 'xxx' is not known]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
